# University-Management-System

./: CMakeLists.txt  README.md
include/: Repository.h  Service.h  Student.h  gui.h  teste.h
src/: Repository.cpp  Service.cpp  Student.cpp  gui.cpp  main.cpp  teste.cpp
